Test cases fixes